--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
             >
             <div class="flex space-x-4">
               <a
-                href="login.html"
+                href="https://wefix-psi.vercel.app/"
                 class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-md font-medium"
                 >Login</a
               >
               <a
-                href="#"
+                href="https://wefix-psi.vercel.app/"
                 class="bg-primary hover:bg-primary-dark text-white px-4 py-2 rounded-md font-medium"
                 >Sign Up</a
               >
